--- a/index.html
+++ b/index.html
@@ -2,15 +2,25 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-7PDWGL9LNS"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-7PDWGL9LNS');
+  </script>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Testing my Google analytics skills</title>
 </head>
 
+
 <body>
   <h1>Hello there, back to the good old days of pure HTML...</h1>
-  <button>Click me and I will not do anything</button>
+  <button>Click me and I will do nothing</button>
 </body>
 
 </html>
